--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,4 +1,52 @@
-h1 {
-	font-family: Garamond;
+body {
+	font-family: Helvetica, sans-serif;
+}
+
+.projectName a{
 	color: #35A26D;
+	text-decoration: none;
+}
+
+nav li {
+	display: inline-block;
+	letter-spacing: 0.25em;
+	background-color: #35A26D;
+	border-radius: 5px;
+	padding: 10px;
+	float: right;
+	margin: 10px;
+}
+
+h1 {
+	margin-top: 100px;
+	font-family: Garamond, serif;
+	color: #35A26D;
+	text-align: center;
+	letter-spacing: 0.25em;
+}
+
+h2 {
+	text-align: center;
+}
+
+.img-responsive {
+	padding: 20px;
+}
+
+.center-block {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+footer {
+	text-align: center;
+	height: 50px;
+	background-color: #35A26D; 
+}
+
+@media screen and (max-width: 768px) {
+	h1 {
+		margin-top: 150px;
+	}
 }
