--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,11 @@
         <div class="navbar-collapse collapse.in">
         <div class="nav navbar-nav navbar-right">
   		    <ul class="nav nav-pills" role="tablist">
-      			<li>Home</li>
-      			<li>About</li>
-      			<li>Contact</li>
+      			<li><a href="../static_pages/index">Home</a></li>
+      			<li><a href="../static_pages/about">About</a></li>
+            <li><a href="../products">Products</a></li>
+      			<li><a href="../static_pages/contact">Contact</a></li>
+
   		    </ul>
         </div> <!-- end navbar-right -->
         </div> <!-- end collapse.in -->
