--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,4 @@
+<div id="contact">
 <h2>We are wherever you are!</h2>
 
 <h3>Location</h3>
@@ -6,3 +7,4 @@
 
 <h3>Hours</h3>
 	<p>Everyday: 12PM-7PM</p>
+</div>	
