--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :image_url, id: :product_image_url %>
   </div>
 
+  <div class="field">
+    <%= form.label :colour %>
+    <%= form.text_field :colour %>
+  </div>  
+
   <div class="actions">
     <%= form.submit %>
   </div>
