--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,48 +2,22 @@
 
 <h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Colour</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= product.colour %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
 <%= link_to 'New Product', new_product_path %>
 
 <div class="container">
   <div class="row">
     <% @products.each do |product| %>
       <div class="col-sm-2 col-md-4">
-      <% product.name %>
-       <%= image_tag(product.image_url, class: "img-responsive") %>
+      <%= product.name %>
+       <%= image_tag(product.image_url, class: "img-responsive") %>      
         <a href="#"><h1>Bike 1</h1></a>
-      <% product.description %>  
-        <p>Cool bikes</p>
-        <strong>$ 42</strong>
+      <%= product.description %> 
+      <td><%= link_to 'Show', product %></td> 
+      <td><%= link_to 'Edit', edit_product_path(product) %></td>
+      <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
       </div> <!-- end col -->
-    <% end %>
+    
   </div> <!-- end row -->
   
 </div> <!-- end container -->
