--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,24 +1,29 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
-
+<br>
 <%= link_to 'New Product', new_product_path %>
-
-<div class="container">
+<br>
+<br>
+<div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
-      <div class="col-sm-2 col-md-4">
-      <%= product.name %>
-           
-        <a href="#"><h1>Bike 1</h1></a>
-      <%= product.description %> 
-      <td><%= link_to 'Show', product %></td> 
-      <td><%= link_to 'Edit', edit_product_path(product) %></td>
-      <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
+      <div class="col-sm-2 col-md-4" id="card">  
+        <a href="#"><h2><%= product.name %></h2></a>
+        <br> 
+        <%= image_tag(product.image_url, class: "img-responsive") %>
+        <br>  
+        <%= product.description %>
+        <br>
+        <%= product.price %>
+        <br>
+        <%= product.colour %>
+        <br>
+        <td><%= link_to 'Show', product %></td> 
+        <td><%= link_to 'Edit', edit_product_path(product) %></td>
+        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>     
       </div> <!-- end col -->
-    
+      <% end %>    
   </div> <!-- end row -->
-  
 </div> <!-- end container -->
 
