--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   		    <ul class="nav nav-pills" role="tablist">
       			<li><a href="../static_pages/index">Home</a></li>
       			<li><a href="../static_pages/about">About</a></li>
-            <li><a href="../products">Products</a></li>
+            <li><a href="../products/index">Products</a></li>
       			<li><a href="../static_pages/contact">Contact</a></li>
 
   		    </ul>
