--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,12 +1,30 @@
-<h2>Featured Product:</h2>
-<br>
-<br>
-<%= @featured_product.name %>
-<br> 
-<%= image_tag(@featured_product.image_url, class: "img-responsive") %>
-<%= @featured_product.description %>
-<br>
-<%= @featured_product.price %>
-<br>
-<%= @featured_product.colour %>
-<br>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	<!-- Indicators -->
+	<ol class="carousel-indicators">
+		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	</ol>
+
+	<!-- Wrapper for slides -->
+	<div class="carousel-inner" role="listbox">
+		<% @products.each do |product| %>
+		<div class="item<%= " active" if product == @products.first %>">
+			<%= image_tag(product.image_url) %>
+			<div class="carousel-caption">
+				<%= product.name %>
+			</div>
+		</div>
+		<% end %>
+	</div> <!-- end wrapper for slides -->			
+
+	<!-- Controls -->
+		<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>	
+		<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>	
+		</a>
+</div>	<!-- end carousel	 -->	
