--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,21 +9,7 @@
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
-      <div class="col-sm-2 col-md-4" id="card">  
-        <a href="#"><h2><%= product.name %></h2></a>
-        <br> 
-        <%= image_tag(product.image_url, class: "img-responsive") %>
-        <br>  
-        <%= product.description %>
-        <br>
-        <%= product.price %>
-        <br>
-        <%= product.colour %>
-        <br>
-        <td><%= link_to 'Show', product %></td> 
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>     
-      </div> <!-- end col -->
+     <%= render @products %>
       <% end %>    
   </div> <!-- end row -->
 </div> <!-- end container -->
