--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -10,7 +10,7 @@
 	<div class="carousel-inner" role="listbox">
 		<% @products.each do |product| %>
 		<div class="item<%= " active" if product == @products.first %>">
-			<%= image_tag(product.image_url) %>
+			<%= image_tag(product.image_url, class: "img-responsive") %>
 			<div class="carousel-caption">
 				<%= product.name %>
 			</div>
