--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
-     <%= render @products %>
+     <%= render partial: "product", locals: {product: product} %>
       <% end %>    
   </div> <!-- end row -->
 </div> <!-- end container -->
