--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,11 @@
 <div id="contact">
-<h1>We are wherever you are!</h1>
+<h1>Contact and Support</h1>
 
 <h3>Location</h3>
 	<p>Kopenicker Str. 126</p>
 	<p>10179 Berlin, Germany</p>
+	<p>049.30.555.1234</p>
+	<p>contact@bikeberlin.com</p>
 
 <h3>Hours</h3>
 	<p>Everyday: 12PM-7PM</p>
