--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -17,6 +17,32 @@ nav li {
 	margin: 10px;
 }
 
+.carousel-caption {
+	color: #35A26D;
+	font-size: 20px;
+	letter-spacing: 0.25em;
+	text-shadow: 2px 2px black;
+	font-weight: 900;
+}
+
+#carousel-example-generic {
+	margin-top: 100px;
+}
+
+.item img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.carousel-control {
+	background-image: none !important;
+}
+
+.glyphicon {
+	color: #35A26D;
+}
+
 h1 {
 	margin-top: 150px;
 	font-family: Garamond, serif;
@@ -49,10 +75,16 @@ footer {
 	background-color: #35A26D; 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
 	h1,
 	#contact,
 	#about	 {
-		margin-top: 150px;
+		margin-top: 250px;
+	}
+	#carousel-example-generic {
+		margin-top: 300px;
+	}
+	.carousel-control {
+		background: none !important;
 	}
 }
