--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,14 +7,18 @@ body {
 	text-decoration: none;
 }
 
-nav li {
+ul a {
 	display: inline-block;
 	letter-spacing: 0.25em;
 	background-color: #35A26D;
 	border-radius: 5px;
-	padding: 10px;
-	float: right;
+	padding: 20px;	
 	margin: 10px;
+}
+
+ul a:hover {
+	text-decoration: none;
+	text-transform: uppercase;
 }
 
 .carousel-caption {
