--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>mmBikeBerlin</title>
-    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<head>
+		<title>mmBikeBerlin</title>
+		
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    
-    <meta name="viewport" content="width-device-width, initial-scale=1">
-    <%= csrf_meta_tags %>
-  </head>
+		<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		
+		<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		
+		<meta name="viewport" content="width-device-width, initial-scale=1">
+		<%= csrf_meta_tags %>
+	</head>
 
-  <body data-target=".navbar">
-  	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <div class="projectName navbar-brand">
-            <a href="#">Bike Berlin</a>
-          </div> <!-- end brand -->  
-        </div> <!-- end navbar-header -->
-        <div class="navbar-collapse collapse.in">
-        <div class="nav navbar-nav navbar-right">
-  		    <ul class="nav nav-pills" role="tablist">
-            <%= link_to "Home", static_pages_index_path %>
-            <%= link_to "About", static_pages_about_path %>
-      			<%= link_to "Products", products_path %>
-            <%= link_to "Contact", static_pages_contact_path %>		 
-  		    </ul>
-        </div> <!-- end navbar-right -->
-        </div> <!-- end collapse.in -->
-      </div> <!-- end container-fluid -->
-  	</nav>	
-    <%= yield %>
+	<body data-target=".navbar">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<div class="projectName navbar-brand">
+						<a href="#">Bike Berlin</a>
+					</div> <!-- end brand -->  
+				</div> <!-- end navbar-header -->
+				<%= form_with(url: products_path, method: 'get') do |form| %>
+					<%= form.label :q, 'Search for:' %>
+					<%= form.text_field :q, id: 'q', value: params[:q] %>
+					<%= form.submit 'Search' %>
+				<% end %>    
+				<div class="navbar-collapse collapse.in">
+				<div class="nav navbar-nav navbar-right">
+					<ul class="nav nav-pills" role="tablist">
+						<%= link_to "Home", static_pages_index_path %>
+						<%= link_to "About", static_pages_about_path %>
+						<%= link_to "Products", products_path %>
+						<%= link_to "Contact", static_pages_contact_path %>		 
+					</ul>
+				</div> <!-- end navbar-right -->
+				</div> <!-- end collapse.in -->
+			</div> <!-- end container-fluid -->
+		</nav>	
+		<%= yield %>
 		<footer class="footer navbar-fixed-bottom">
 			&copy; 2017 Bike Berlin
 		</footer>
 
-  </body>
+	</body>
 </html>
