--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,6 +2,10 @@ body {
 	font-family: Helvetica, sans-serif;
 }
 
+input {
+	color: red;
+}
+
 .projectName a{
 	color: #35A26D;
 	text-decoration: none;
