--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<div class="projectName navbar-brand">
-						<a href="#">Bike Berlin</a>
+						<%= link_to "Bike Berlin", static_pages_index_path %>
 					</div> <!-- end brand -->  
 				</div> <!-- end navbar-header -->
 				<%= form_tag("/products", method: "get", class: "navbar-form", role:"search") do %>
