--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -9,7 +9,8 @@
 
 <h3>Hours</h3>
 	<p>Everyday: 12PM-7PM</p>
-</div>	
+</div>
+<div id="contact-form">	
 <h1>Contact Us</h1>
 <%= flash[:notice] %>
 <%= form_with(url: "/static_pages/thank_you") do |form| %>
@@ -31,3 +32,4 @@
 	</div> <!-- end row -->	
 	<%= form.submit "Send" %>
 	<% end %>
+	</div>
