--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -10,26 +10,27 @@
 <h3>Hours</h3>
 	<p>Everyday: 12PM-7PM</p>
 </div>
+
 <div id="contact-form">	
 <h1>Contact Us</h1>
 <%= flash[:notice] %>
-<%= form_with(url: "/static_pages/thank_you") do |form| %>
+<%= form_tag("/static_pages/thank_you") do %>
 	<div class="row">
 		<div class="col-md-4">
 			<div class="form-group">
-				<%= form.label :name %>
-				<%= form.text_field :name, class: "form-control", placeholder:"Enter Name" %>
+				<%= label_tag :name %>
+				<%= text_field_tag :name, nil, class: "form-control", placeholder:"Enter Name" %>
 			</div> <!-- end Name form-group -->	
 			<div class="form-group">
-				<%= form.label :email, "Email Address" %>
-				<%= form.text_field :email, class: "form-control", placeholder: "Enter Email" %>
+				<%= label_tag :email, "Email Address" %>
+				<%= text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
 			</div> <!-- end Email form-group	 -->
 			<div class="form-group">
-				<%= form.label :message %>
-				<%= form.text_area :message, class: "form-control", placeholder: "Enter Message" %>
+				<%= label_tag :message %>
+				<%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
 			</div> <!-- end Message form-group -->	
 		</div> <!-- end col -->	
 	</div> <!-- end row -->	
-	<%= form.submit "Send" %>
+	<%= submit_tag "Send", class: "btn btn-default submit-button" %>
 	<% end %>
 	</div>
