--- a/app/views/user_mailer/contact_form.html.erb
+++ b/app/views/user_mailer/contact_form.html.erb
@@ -1,8 +1,8 @@
 <table>
 	<tbody>
 		<tr>
-			<td><p>You have received a new contact form message.  The content of the message is: </p></td>
+			<td><p>You have received a new contact form message.  The content of the message is:</p></td>
 		</tr>
-			<td><p><%= @message %></p></td>
+			<td><p style="color: ##35A26D; font: Arial, bold;"><%= @message %></p></td>
 	</tbody>
 </table>
