--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
-    	body {background-color: #5f5f5f;}
+    	tbody {background-color: #5f5f5f;}
     	p	   {color: #35A26D;}	
     </style>
   </head>
