--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -11,21 +11,17 @@ body {
 	text-decoration: none;
 }
 
+input::placeholder {
+	font-size: 14px;
+}
+
 ul a {
-	display: inline-block;
-	letter-spacing: 0.25em;
-	background-color: #35A26D;
-	border-radius: 5px;
-	padding: 20px;
-	margin: 10px;	
+	padding: 10px;
 }
 
 ul a:hover {
+	color: #35A26D !important;
 	text-decoration: none;
-}
-
-.nav-pills {
-	margin-top: -25px;
 }
 
 .carousel-caption {
@@ -37,20 +33,16 @@ ul a:hover {
 }
 
 #carousel-example-generic {
-	margin-top: 100px;
+	margin-top: 75px;
 }
 
-.item img {
+.carousel-item img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.carousel-control {
-	background-image: none !important;
-}
-
-.glyphicon {
+.fa-2x {
 	color: #35A26D;
 }
 
@@ -76,7 +68,7 @@ h3 {
 	letter-spacing: 0.25em;
 }
 
-.img-responsive {
+.img-fluid {
 	padding: 20px;
 }
 
@@ -96,7 +88,6 @@ h3 {
 
 #card a:hover {
 	text-decoration: none;
-	font-style: italic;
 }
 
 #contact-form {
@@ -106,7 +97,7 @@ h3 {
 #thank-you {
 	margin-top: 200px;
 }
-	
+
 footer {
 	text-align: center;
 	height: 50px;
