--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,7 @@
-<div class="col-sm-2 col-md-4" id="card">  
+<div class="col-sm" id="card">  
   <a href="#"><h2><%= product.name %></h2></a>
   <br> 
-  <%= image_tag(product.image_url, class: "img-responsive") %>
+  <%= image_tag(product.image_url, class: "img-fluid") %>
   <br>  
   <%= product.description %>
   <br>
