--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -9,8 +9,8 @@
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
 		<% @products.each do |product| %>
-		<div class="item<%= " active" if product == @products.first %>">
-			<%= image_tag(product.image_url, class: "img-responsive") %>
+		<div class="carousel-item<%= " active" if product == @products.first %>">
+			<%= image_tag(product.image_url, class: "d-block img-fluid") %>
 			<div class="carousel-caption">
 				<%= product.name %>
 			</div>
@@ -19,12 +19,12 @@
 	</div> <!-- end wrapper for slides -->			
 
 	<!-- Controls -->
-		<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		<a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
+			<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
 			<span class="sr-only">Previous</span>
 		</a>	
-		<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		<a class="carousel-control-next" href="#carousel-example-generic" role="button" data-slide="next">
+			<i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
 			<span class="sr-only">Next</span>	
 		</a>
 </div>	<!-- end carousel	 -->	
