--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -16,7 +16,7 @@
 <%= flash[:notice] %>
 <%= form_tag("/static_pages/thank_you") do %>
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-3 ">
 			<div class="form-group">
 				<%= label_tag :name %>
 				<%= text_field_tag :name, nil, class: "form-control", placeholder:"Enter Name" %>
