--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -98,6 +98,12 @@ h3 {
 	margin-top: 200px;
 }
 
+#alert {
+	margin: 0px 150px 10px 150px;
+	padding: 20px;
+	text-align: center;	
+}
+
 footer {
 	text-align: center;
 	height: 50px;
