--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -49,7 +49,12 @@ ul a:hover {
 .carousel-indicators .active{
 	background-color: #35A26D;
 }
-	
+
+.bikein {
+	width: 100%;
+	height: auto;
+}
+
 h1 {
 	margin-top: 150px;
 	font-family: Garamond, serif;
@@ -70,12 +75,6 @@ h3 {
 
 .img-fluid {
 	padding: 20px;
-}
-
-.center-block {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 #about {
