--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 			<div id="notice" class="alert alert-success"><%= notice %></div>
 		<% end %>
 		<% if alert %>	
-			<div id="alert" class="alert alert-danger" role="alert"><%= alert %></div>
+			<div id="alert" class="alert alert-danger" style="display: none;" role="alert"><%= alert %></div>
 		<% end %>	
 	<!-- Navigation -->
 		<nav class="navbar sticky-top navbar-toggleable-md navbar-light" style="background-color: #eee;" >
