--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Image url:</strong>
-  <%= image_tag(@product.image_url, class: "img-responsive") %>
+  <%= image_tag(@product.image_url, class: "img-fluid") %>
 </p>
 
 <p>
