--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,8 @@
-<div class="col-sm" id="card">  
+<div class="col-sm align-self-start" id="card">
   <a href="#"><h2><%= product.name %></h2></a>
   <br> 
-  <%= image_tag(product.image_url, class: "img-fluid") %>
+  <%= image_tag(product.image_url, class: "img-fluid img-thumbnail", width: '318px', height: '180px') %> 
+  <br>
   <br>  
   <%= product.description %>
   <br>
@@ -9,7 +10,13 @@
   <br>
   <%= product.colour %>
   <br>
+  <br>
+  <a href="#" class="btn btn-default" style="background-color: #eee;">More Information</a>
+  <br>
+  <br>
   <td><%= link_to 'Show', product %></td> 
   <td><%= link_to 'Edit', edit_product_path(product) %></td>
   <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>     
+
 </div> <!-- end col -->
+
