--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
-<%= image_tag("bikepost.jpg", class: "img-fluid homebike") %>
+<h2>Your source for used cargo bikes in Berlin</h2>
+<%= image_tag("indexbike.jpg", class: "img-fluid homebike") %>
