--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,5 +25,10 @@
 	<%= @product.price %>
 </p>
 
+<%= @product.highest_rating_comment %>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+
+
+
