--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,7 +9,7 @@
   <strong>Description:</strong>
   <%= @product.description %>
 </p>
-<%= render 'new_comment' %>
+
 <p>
   <strong>Image url:</strong>
   <%= image_tag(@product.image_url, class: "img-fluid") %>
@@ -25,10 +25,12 @@
 	<%= @product.price %>
 </p>
 
+<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+
 <%= @product.highest_rating_comment %>
+<%= render 'new_comment' %>
+<%= render 'comments' %>
+
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
-
-
-
