--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,7 +25,9 @@
 	<%= @product.price %>
 </p>
 
-<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+<p>Average Rating: 
+  <div class="rated" data-score="<%= @product.average_rating %>"></div> 
+</p>
 
 <%= @product.highest_rating_comment %>
 <%= render 'new_comment' %>
