--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
 
+<p id="notice"><%= notice %></p>
 <p>
   <strong>Name:</strong>
   <%= @product.name %>
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Image url:</strong>
-  <%= image_tag(@product.image_url, class: "img-fluid") %>
+  <%= image_tag(@product.image_url, class: "img-fluid show-img") %>
 </p>
 
 <p>
@@ -25,14 +25,11 @@
 	<%= @product.price %>
 </p>
 
-<p>Average Rating: 
+<p>Average Rating:</p>
   <div class="rated" data-score="<%= @product.average_rating %>"></div> 
-</p>
 
-<%= @product.highest_rating_comment %>
 <%= render 'new_comment' %>
 <%= render 'comments' %>
-
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
