--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 		<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 		
-		<%= javascript_include_tag 'ratyrate.js', "data-turbolinks-track": false %>		
+		<%= javascript_include_tag 'jquery.raty.js', "data-turbolinks-track": false %>		
 		<meta name="viewport" content="width-device-width, initial-scale=1">
 		<%= csrf_meta_tags %>
 	</head>
