--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -14,4 +14,4 @@
 			<hr>	
 	<% end %>
 </div>
-<%= will_paginate @comments, :style => 'color:blue' %>
+<%= will_paginate @comments, renderer: BootstrapPagination:: Rails %>
