--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,11 +1,16 @@
 <br>
 <div class="product-reviews">
 	<% @comments.each do |comment| %>
-
 		<div class="row">
 		<hr>
+
 			<div class="posted-reviews">			
-				<p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>			
+				<p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small>
+				<% if signed_in? && current_user.admin? %>
+
+					<%= link_to ('<i class="fa fa-times"></i>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %>	
+					<% end %>
+				</p>			
 						<div class="rated" data-score="<%= comment.rating %>"></div>
 					<br>
 				<p><%= comment.body %></p>	
