--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,6 +24,10 @@
 	<%= @product.price %>
 </p>
 
+<%= form_tag "/payments/create" do |form| %>
+  <%= render partial: "shared/stripe_checkout_button" %>
+<% end %>  
+
 <p>Average Rating:</p>
   <div class="rated" data-score="<%= @product.average_rating %>"></div> 
 
