--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -4,5 +4,6 @@
   data-image="<%= image_path(@product.image_url) %>"
   data-name="<%= @product.name %>"
   data-description="<%= @product.description %>"
-  data-amount="<%= @product.price * 100 %>">
+  data-amount="<%= @product.price * 100 %>"
+  data-currency="EUR">
 </script>
